<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/textView"
        style="@style/H3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/text_pay_bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:constraint_referenced_ids="ll1,ll2,ll3,ll4,ll5,ll6,ll7,ll8"
        app:flow_horizontalGap="40dp"
        app:flow_horizontalStyle="spread"
        app:flow_verticalGap="16dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_phone" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_data" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_data"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_invest" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_invest"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_game" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_game"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_net" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_net"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_pln" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pln"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_bpjs" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_bpjs"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_content_description"
            android:src="@drawable/ic_water" />

        <TextView
            style="@style/Subhead3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_water"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>